# django-tasks

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  docker-compose.yml  justfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pre-commit.yml
django_core_tasks/: __init__.py  apps.py  exceptions.py  signal_handlers.py  task.py  utils.py
django_core_tasks/backends/: base.py  dummy.py  immediate.py
django_tasks/: __init__.py  apps.py  base.py  checks.py  exceptions.py  mail.py  signal_handlers.py  signals.py  task.py  utils.py
django_tasks/backends/: base.py  dummy.py  immediate.py  rq.py  threadpool.py
django_tasks/backends/celery/: __init__.py  app.py  backend.py
django_tasks/backends/database/: admin.py  apps.py  backend.py  models.py  routers.py  signal_handlers.py  utils.py
django_tasks/backends/database/locale/pt_BR/LC_MESSAGES/: django.po
django_tasks/backends/database/management/commands/: cull_db_tasks.py  db_worker.py  prune_db_task_results.py  prune_db_task_runs.py  prune_db_tasks.py
django_tasks/backends/database/migrations/: 0001_initial.py  0004_dbtaskresult_started_at.py  0005_alter_dbtaskresult_priority_and_more.py  0005_dbtaskresult_signature.py  0005_dbtaskresult_signature_salt.py  0006_alter_dbtaskresult_args_kwargs_and_more.py  0007_dbtaskresult_signature_salt.py  0007_remove_dbtaskresult_result_and_more.py  0007_rename_dbtaskresult_dbtaskrun.py  0008_separate_results_field.py  0010_add_indexes.py  0010_rename_complete_status.py  0011_alter_dbtaskresult_status.py  0011_rename_complete_status.py  0015_dbtaskresult_timeout.py  0015_dbtaskresult_worker_id.py  0015_dbworkerping_dbtaskresult_worker_id.py  0016_alter_dbtaskresult_options_and_more.py  0016_dbworkerping.py  0016_remove_dbtaskresult_django_task_new_ordering_idx_and_more.py  0017_alter_dbtaskresult_run_after.py  0017_remove_dbtaskresult_django_task_new_ordering_idx_and_more.py  0018_dbtaskresult_worker_id.py  0018_rename_succeeded_status.py  0019_remove_dbtaskresult_worker_id_and_more.py
django_tasks/locale/pt_BR/LC_MESSAGES/: django.po
tests/: db_worker_test_settings.py  is_global_function_fixture.py  settings.py  settings_fast.py  tasks.py  test_base_backend.py  test_dummy_backend.py  test_immediate_backend.py  test_tasks.py  test_utils.py  urls.py  views.py
tests/tests/: is_global_function_fixture.py  is_module_level_function_fixture.py  test_celery_backend.py  test_compat.py  test_custom_backend.py  test_database_backend.py  test_database_selection.py  test_dummy_backend.py  test_email_backend.py  test_immediate_backend.py  test_rq_backend.py  test_signed_tasks.py  test_tasks.py  test_threadpool_backend.py  test_utils.py
